# ehc-sn

./: .gitignore  .gitmodules  README.md  cspell.json  demo.py  development.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cspell/: custom-dictionary.txt
.github/: copilot-instructions.md
config/: autoencoder.toml  baseline.toml  decoder.toml
docs/: EHC-connections.md  Vector-HaSH.md  conf.py  index.rst
examples/: autoencoder.py  autoencoders.py  bp_baseline.py  drtp_simplified.py  example.py  first-example.ipynb  obstacle_maps.py
notebooks/: can-visuals.ipynb  cognitive-maps.ipynb  load-model.ipynb  mec-visuals.ipynb
scripts/: bp_autoencoder.py  bp_baseline.py  bp_decoder.py  dfa_autoencoder.py  dfa_decoder.py  dfa_feedback.py  drtp_autoencoder.py  drtp_decoder.py  drtp_feedback.py  hybrid_feedback.py  mezo_autoencoder.py  mezo_simple.py  sparse_backprop.py  spsa_feedback.py  srtp_autoencoder.py  srtp_decoder.py  zo_decoder.py
src/ehc_sn/: __init__.py  config.py  decoders.py  encoders.py  environment.py  equations.py  hpc.py  layers.py  model.py  models.py  nn.py  parameters.py  settings.py  simulations.py  spatial_scaffold.py  utils.py
src/ehc_sn/config/: __init__.py  parameters.toml
src/ehc_sn/constants/: __init__.py  enums.py  literals.py  types.py
src/ehc_sn/core/: __init__.py  ann.py  datamodule.py  drtp.py  figure.py  models.py  neurons.py  snn.py  synapses.py  trainer.py
src/ehc_sn/data/: __init__.py  _base.py  base.py  cognitive_maps.py  grid_maps.py  minigrid_maps.py  obstacle_maps.py  simple_example.py
src/ehc_sn/figures/: __init__.py  binary_map.py  cognitive_maps.py  decoder_montage.py  reconstruction_1d.py  reconstruction_map.py  settings.py  sparsity.py
src/ehc_sn/hooks/: __init__.py  datahooks.py  dfa.py  drtp.py  progress_bar.py  registry.py  srtp.py
src/ehc_sn/hpc/: __init__.py  network.py  place_cells.py
src/ehc_sn/learning/: sparsity.py
src/ehc_sn/losses/: autoencoders.py
src/ehc_sn/mec/: __init__.py  core.py  grid_cells.py  network.py  view.py
src/ehc_sn/models/: __init__.py  autoencoder.py  autoencoders.py  can.py  config.py  decoders.py  encoders.py  example.py  item_memory.py  models.py
src/ehc_sn/models/ann/: autoencoders.py  decoders.py  dfa_autoencoder.py  drtp_autoencoder.py  encoders.py  hybrid_autoencoder.py  sparse_autoencoder.py  spsa_autoencoder.py
src/ehc_sn/models/backprop/: autoencoders.py  decoders.py
src/ehc_sn/modules/: __init__.py  dfa.py  drtp.py  loss.py  spsa.py  srtp.py  zo.py
src/ehc_sn/representations/: grid_cells.py  place_cells.py
src/ehc_sn/trainers/: __init__.py  _base.py  back_propagation.py  backprop.py  core.py  example.py  feed_forward.py  feedback_aligment.py  target_projection.py  zeroth_order.py
src/ehc_sn/trainers/backprop/: mse.py  sparsity.py
src/ehc_sn/training/: __init__.py  _base.py  autoencoder.py  example.py  loss.py  sparsity.py
src/ehc_sn/utils/: __init__.py  grids.py  maps.py  methods.py  noise.py  random.py
tests/: conftest.py  test_core.py  test_drtp.py  test_drtp_layer.py  test_equations.py  test_model.py  test_models.py  test_network.py  test_utils.py
tests/config/: model_1.toml
tests/hpc/: conftest.py  test_network.py  test_place_cells.py
tests/mec/: conftest.py  test_grid_layer.py  test_mec_network.py  test_network.py
tests/test_models/: config_1.toml  conftest.py  test_models.py
tools/: __init__.py  visualize_scaffold.py
