[build-system]
    requires      = ["setuptools>=61.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "ehc-sn"
    description = "Entorhinal-Hippocampal Complex (EHC) Spatial Navigation library"
    authors = [{ name = "Borja Esteban Sanchis" }]
    license = { text = "GNU General Public License v3.0" }
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Neuroscience",
    ]
    keywords = [
        "neuroscience",
        "spatial navigation",
        "hippocampus",
        "entorhinal cortex",
        "neural modeling",
    ]
    requires-python = ">=3.10"
    dynamic = ["version", "readme"]
    dependencies = [
        "scipy~=1.15.0",
        "torch~=2.7.1",
        "lightning~=2.5.1",
        "torchvision~=0.22.1",
        "matplotlib~=3.10.3",
        "seaborn~=0.13.2",
        "pydantic~=2.11.5",
        "pydantic_settings~=2.9.1",
        "rich~=14.0.0",
        "tqdm~=4.67.1",
        "tomli~=2.2.1",
        "typer~=0.16.0",
    ]

[project.optional-dependencies]
    dev = [
        "pytest~=8.4.0",
        "pytest-cov~=6.1.1",
        "black~=25.1.0",
        "isort~=6.0.1",
        "flake8~=7.2.0",
        "mypy~=1.16.0",
        "sphinx~=8.1.3",
        "sphinx-rtd-theme~=3.0.2",
        "ipywidgets~=8.1.7",
        "tensorboard~=2.19.0",
        "scikit_learn~=1.7.0",
    ]

[project.urls]
    "Homepage"      = "https://github.com/BorjaEst/ehc-sn"
    "Bug Tracker"   = "https://github.com/BorjaEst/ehc-sn/issues"
    "Documentation" = "https://ehc-sn.readthedocs.io"

[tool.setuptools]
    package-dir = { "" = "src" }

[tool.setuptools.dynamic]
    version = { file = "src/ehc_sn/VERSION" }
    readme  = { file = ["README.md"] }

[tool.black]
    line-length    = 120
    target-version = ["py310", "py311", "py312"]

[tool.isort]
    profile     = "black"
    line_length = 120

[tool.mypy]
    python_version           = "3.10"
    warn_return_any          = false
    warn_unused_configs      = false
    disallow_untyped_defs    = false
    disallow_incomplete_defs = false

[tool.pytest.ini_options]
    pythonpath       = [".", "src"]
    testpaths        = ["tests"]
    python_files     = "test_*.py"
    python_classes   = "Test*"
    python_functions = "test_*"
    addopts          = "--import-mode=importlib"
